===============================================================================

~~~~~~~~~
! v5.3.0:
~~~~~~~~~

! KGySoft.Drawing.Imaging namespace:
====================================
! RandomNoiseDitherer constructor: An ArgumentOutOfRangeException is thrown for invalid strength
! InterleavedGradientNoiseDitherer constructor: An ArgumentOutOfRangeException is thrown for invalid strength


~~~~~~~~~
* v5.2.1:
~~~~~~~~~

+ Assembly changes:
===================
+ Targeting also .NET Standard 2.0.
+ Targeting also .NET Standard 2.1.

- KGySoft.Drawing namespace:
============================
- MetafileExtensions class:
  - ToBitmap method: Fixing result in Windows if keeping aspect ratio without anti-aliasing and metafile origin is
    not at Point.Zero location (a metafile can be located even at negative coordinates). On Linux/Mono the result
    still can be misplaced though.
- Icons/IconExtensions classes: Tolerating if BMP icon stream does not have a transparency mask.


~~~~~~~~~
! v5.2.0:
~~~~~~~~~

! KGySoft.Drawing namespace:
============================
! PixelFormatExtensions:
  ! The IsSupported method has been renamed to IsSupportedNatively because BitmapDataFactory can create a managed
    bitmap data of any pixel formats.
! ImageExtensions class:
  ! SaveAsMultipageTiff: On Linux the used System.Drawing members throw a NotImplementedException, which is now
    caught and a PlatformNotSupportedException is thrown instead
  * DrawInto methods:
    + New overloads that allow custom quantizing.
    + New overloads that allow resizing.
    - Using alpha blending even if a ditherer is used for the drawing.
    - Fixing result with ditherers that rely on actual content
  * ToIcon(Image, int, bool): Using custom resizing for anti-aliasing to prevent process-wide locking used by
    Graphics.DrawImage
! BitmapExtensions class:
  ! The old Resize method returns a Bitmap with Format32bppPArgb pixel format instead of Format32bppArgb.